--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/assets/css/global.css" />
-    <link rel="stylesheet" href="/assets/css/header.css" />
-    <link rel="stylesheet" href="/assets/css/acordeon.css" />
-    <link rel="stylesheet" href="/assets/css/languages.css" />
-    <link rel="stylesheet" href="/assets/css/portfolio.css" />
-    <link rel="stylesheet" href="/assets/css/experience.css" />
-    <link rel="stylesheet" href="/assets/css/skills.css" />
+    <link rel="stylesheet" href="assets/css/global.css" />
+    <link rel="stylesheet" href="assets/css/header.css" />
+    <link rel="stylesheet" href="assets/css/acordeon.css" />
+    <link rel="stylesheet" href="assets/css/languages.css" />
+    <link rel="stylesheet" href="assets/css/portfolio.css" />
+    <link rel="stylesheet" href="assets/css/experience.css" />
+    <link rel="stylesheet" href="assets/css/skills.css" />
   </head>
   <body>
     <main class="main">
       <header class="header">
         <img
-          src="/assets/img/luizito.png"
+          src="assets/img/luizito.png"
           class="photo"
           alt="Foto de perfil"
           id="profile.photo"
@@ -102,16 +102,14 @@
       <section class="acordeon">
         <button class="trigger" type="button">Idiomas</button>
         <div class="content">
-          <ul class="languages" id="profile.languages">
-          </ul>
+          <ul class="languages" id="profile.languages"></ul>
         </div>
       </section>
 
       <section class="acordeon">
         <button class="trigger" type="button">Projetos</button>
         <div class="content">
-          <ul class="portfolio" id="profile.projects">
-          </ul>
+          <ul class="portfolio" id="profile.projects"></ul>
         </div>
       </section>
 
@@ -134,8 +132,8 @@
         </div>
       </section>
     </main>
-    <script src="/assets/js/acordeon.js"></script>
-    <script src="/assets/js/api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/acordeon.js"></script>
+    <script src="assets/js/api.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
