--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="assets/css/portfolio.css" />
     <link rel="stylesheet" href="assets/css/experience.css" />
     <link rel="stylesheet" href="assets/css/skills.css" />
+    <link rel="stylesheet" href="assets/css/footer.css" />
   </head>
   <body>
     <main class="main">
@@ -131,6 +132,9 @@
           </ul>
         </div>
       </section>
+      <footer>
+        <a href="https://www.dio.me/" target="_blank"><img src="assets/icons/dio.svg" alt="DIO"></a>
+      </footer>
     </main>
     <script src="assets/js/acordeon.js"></script>
     <script src="assets/js/api.js"></script>
